--- a/estilos/notícias.css
+++ b/estilos/notícias.css
@@ -53,7 +53,7 @@ nav a:hover{
     margin-left: -8px;
     text-align: left;
     background-position: center center;
-    background-image: url(/imagens/pexels-joão-jesus-879178.jpg);
+    background-image: url(../imagens/pexels-joão-jesus-879178.jpg);
     height: 450px;
     width: 102%;
 }
