--- a/estilos/style.css
+++ b/estilos/style.css
@@ -18,7 +18,8 @@ h1{
 #nav2{
     display: block;
     text-align: right;
-    margin-top: 5px;
+    position: relative;
+    bottom: 20px;
     
 }
 #nav2 > a{
@@ -47,6 +48,11 @@ nav > a{
 }
 nav a:hover{
     text-decoration: underline;
+}
+#eye{
+    display: inline-block;
+    position: relative;
+    top: 10px;
 }
 #noticia1{
     width: 80%;
