--- a/estilos/mediaquerynotices.css
+++ b/estilos/mediaquerynotices.css
@@ -13,6 +13,10 @@
     #nav2{
         display: none;
       }
+    #bottom{
+        display: inline-block;
+        margin: auto;
+    }
 }
 @media screen and (min-width: 400px) and (max-width:768px){
    #caixa{
